<resources>
    <string name="app_name">TemanTani</string>
    <string name="imageview">TemanTani</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="register_description">Silahkan daftar terlebih dahulu agar bisa masuk dan mengeksplor lebih!</string>
    <string name="register_now">Register Now</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="login_description">Selamat datang kembali di Teman Tani! Silahkan isi terlebih dahulu agar bisa masuk</string>
    <string name="text_akun">Belum punya akun?</string>
    <string name="regist">Daftar Sekarang!</string>
    <string name="gandum_segar">Gandum Segar</string>
    <string name="jhon_doe">Jhon Doe</string>
    <string name="description">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</string>
    <string name="rp">Rp</string>
    <string name="harga">5000</string>
    <string name="kg">/Kg</string>
    <string name="pesan">Pesan</string>
    <string name="teman_tani">Teman Tani</string>
    <string name="tanaman">Tanaman</string>
    <string name="alat_tani">Alat Tani</string>
    <string name="all_product">All Product</string>
    <string name="henzi_juandri">Henzi Juandri</string>
    <string name="henzijuandri_icloud_com">henzijuandri@icloud.com</string>
    <string name="deteksi_tanaman">Deteksi Tanaman</string>
    <string name="pilih_tanaman">Pilih Tanaman</string>
    <string name="padi">Padi</string>
    <string name="singkong">Singkong</string>
    <string name="kentang">Kentang</string>
    <string name="tomat">Tomat</string>
    <string name="cabai">Cabai</string>
    <string name="jagung">Jagung</string>
    <string name="deteksi_tanamanmu">Deteksi Tanamanmu</string>
    <string name="upload_produk">Upload Produk</string>
    <string name="kategori_barang">Kategori Barang</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="tambah_barangmu">Tambah Barangmu</string>
    <string name="login_now">Login Now</string>
    <string name="text_to_deteksi">Periksa penyakit tanamanmu!</string>
    <string name="text_to_rekomendasi">Cek rekomendasi tanaman!</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="pcs">/Pcs</string>
    <string name="produk_mu">Produk Mu</string>
    <string name="logout">Logout</string>
    <string name="tanaman_apa_ya">Tanaman Apa ya?</string>
    <string name="cocok">Coba lihat tanaman yang cocok di daerahmu!</string>
    <string name="tekan_untuk_mendapatkan_lokasi">Tekan untuk mendapatkan lokasi</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="detection">Detection</string>
    <string name="profile">Profile</string>
    <string name="tekan">Tekan di sini untuk mengetahui lokasi mu</string>
    <string name="sub_judul">Coba lihat tanaman yang cocok di daerah mu!</string>
    <string name="headline_cocok">Tanaman yang cocok di daerah mu</string>
</resources>