<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.detail.DetailActivity"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="139dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="418dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="540dp" />

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:letterSpacing="0.05"
        android:text="@string/gandum_segar"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/icon_back"
        app:layout_constraintTop_toBottomOf="@+id/guidline1" />

    <ImageView
        android:id="@+id/profile_placeholder"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/ic_person_green"
        app:layout_constraintStart_toStartOf="@+id/nama_item"
        app:layout_constraintTop_toBottomOf="@+id/nama_item"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/jhon_doe"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_placeholder"
        app:layout_constraintStart_toEndOf="@id/profile_placeholder"
        app:layout_constraintTop_toTopOf="@id/profile_placeholder" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_gambar"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:padding="0dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageview"
            android:scaleType="centerCrop"
            android:src="@drawable/gandum" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/card_gambar"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <TextView
        android:id="@+id/deskripsi_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/lorem"
        app:layout_constraintEnd_toEndOf="@id/card_gambar"
        app:layout_constraintStart_toStartOf="@id/card_gambar"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        android:justificationMode="inter_word"
        tools:ignore="UnusedAttribute,VisualLintLongText" />

    <TextView
        android:id="@+id/text_rupiah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/description_title"
        app:layout_constraintTop_toTopOf="@id/btn_pesan"
        app:layout_constraintBottom_toBottomOf="@id/btn_pesan"
        android:text="@string/rp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/harga_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_rupiah"
        app:layout_constraintTop_toTopOf="@id/text_rupiah"
        app:layout_constraintBottom_toBottomOf="@id/text_rupiah"
        android:layout_marginStart="6dp"
        android:text="@string/harga"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/text_kilogram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/harga_item"
        app:layout_constraintBottom_toBottomOf="@id/harga_item"
        android:layout_marginStart="3dp"
        android:text="@string/kg"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/btn_pesan"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/card_gambar"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_green"
        android:text="@string/pesan"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>