<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/batasTengah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/batasKiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gandum"
            android:contentDescription="@string/imageview"
            app:layout_constraintBottom_toTopOf="@id/batasTengah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/nama_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/batasKiri"
            app:layout_constraintTop_toBottomOf="@id/batasTengah"
            android:layout_marginTop="10dp"
            android:text="@string/gandum_segar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/text_rupiah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/nama_item"
            app:layout_constraintTop_toBottomOf="@id/nama_item"
            android:layout_marginTop="2dp"
            android:text="@string/rp"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_rupiah"
            app:layout_constraintTop_toTopOf="@id/text_rupiah"
            app:layout_constraintBottom_toBottomOf="@id/text_rupiah"
            android:layout_marginStart="4dp"
            android:text="@string/harga"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_price"
            app:layout_constraintBottom_toBottomOf="@id/text_price"
            android:text="@string/kg"
            android:textSize="12sp"
            />

        <ImageView
            android:id="@+id/more_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_more_green"
            android:contentDescription="@string/imageview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>