<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66E5E5E5"
    tools:context=".ui.market.MarketActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/batasCokelat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/batasKiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/batasKanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/batasTengah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#9F8772"
        app:layout_constraintBottom_toTopOf="@id/batasCokelat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teman_tani"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/batasCokelat"
        app:layout_constraintStart_toStartOf="@id/batasKiri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/ic_person_white"
        app:layout_constraintBottom_toTopOf="@id/batasCokelat"
        app:layout_constraintEnd_toEndOf="@id/batasKanan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <com.dicoding.temantani.ui.market.EdSearchMarketCustom
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/batasCokelat"
        app:layout_constraintEnd_toEndOf="@id/batasKanan"
        app:layout_constraintStart_toStartOf="@id/batasKiri"
        app:layout_constraintTop_toTopOf="@id/batasCokelat"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.cardview.widget.CardView
        android:id="@+id/kategori_tanaman"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/batasKiri"
        app:layout_constraintEnd_toStartOf="@id/batasTengah"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/kategori_tanam"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tanaman"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/kategori_alat"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/batasKanan"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toEndOf="@id/batasTengah"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/kategori_alat"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/alat_tani"
                android:textColor="@color/white"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/batasKiri"
        app:layout_constraintTop_toBottomOf="@id/kategori_tanaman"
        android:layout_marginTop="20dp"
        android:text="@string/all_product"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTanaman"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_product" />

</androidx.constraintlayout.widget.ConstraintLayout>